<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KSR Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="refresh_trackers">Refresh Trackers</string>
    <string name="tracker_number_label">Tracker Number</string>
    <string name="device_key_label">Device Key</string>
    <string name="device_key_hint">Enter device key</string>
    <string name="status_idle">Ready</string>
    <string name="status_permissions_granted">Permissions granted</string>
    <string name="status_permissions_missing">Permissions missing</string>
    <string name="status_tracking_started">Tracking started (%1$s)</string>
    <string name="status_tracking_stopped">Tracking stopped</string>
    <string name="status_trackers_loaded">Tracker list loaded</string>
    <string name="status_trackers_fallback">Using local tracker list</string>
    <string name="status_missing_device_key">Device key is required</string>
</resources>
